--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "language",
         "languages"
     ],
-    "homepage": "https://github.com/alpheustangs/comfyphp-lang",
+    "homepage": "https://github.com/comfyphp/lang",
     "license": "MIT",
     "authors": [
         {
