--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "comfyphp/lang",
-    "description": "Extension to enable multiple languages for ComfyPHP",
+    "description": "Multiple languages extension for ComfyPHP",
     "keywords": [
         "php",
         "comfy",
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "comfyphp/core": "^1.0.1"
+        "comfyphp/core": "2.0.0"
     },
     "autoload": {
         "psr-4": {
