--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "comfyphp/core": "2.0.0"
+        "comfyphp/core": "^2.0.0"
     },
     "autoload": {
         "psr-4": {
